# polymarket

./: .gitignore  AGENTS.md  Cargo.toml  polymarket-guide.md  simulasi-trading.md
polymarket-bot/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  production.env.example
polymarket-bot/config/: default.toml  production.toml
polymarket-bot/src/: build_info.rs  cli.rs  config.rs  error.rs  evaluation.rs  lib.rs  main.rs  production.rs
polymarket-bot/src/analyzers/: orderbook.rs
polymarket-bot/src/api/: clob.rs  gamma.rs  mod.rs  types.rs
polymarket-bot/src/backtesting/: engine.rs  mod.rs  report.rs  slippage.rs  types.rs  ui.rs
polymarket-bot/src/collector/: data_collector.rs  mod.rs
polymarket-bot/src/crypto/: backtest.rs  binance_ws.rs  engine.rs  indicators.rs  market_matcher.rs  mod.rs  signals.rs  strategy.rs
polymarket-bot/src/crypto/live/: gamma_client.rs  mod.rs  paper_trading.rs  tui.rs
polymarket-bot/src/dashboard/: terminal.rs
polymarket-bot/src/engine/: decision.rs  microstructure.rs  mod.rs  risk.rs  signals.rs  strategy_service.rs
polymarket-bot/src/execution/: dry_signed.rs  lifecycle.rs  live.rs  mod.rs  recovery.rs  secrets.rs  user_stream.rs
polymarket-bot/src/models/: expected_value.rs  mod.rs  position_sizing.rs  probability.rs
polymarket-bot/src/paper_trading/: engine.rs
polymarket-bot/src/storage/: dashboard.rs  database.rs  mod.rs  types.rs
polymarket-bot/src/web/: api.rs  mod.rs  price_proxy.rs  state.rs  ws.rs
polymarket-bot/tests/: integration_test.rs
polymarket-bot/tests/common/: fixtures.rs
src/: main.rs
(+70 files in other folders)
