[package]
name = "polymarket-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
tungstenite = { version = "0.24", features = ["native-tls"] }
ta = "0.5"
rand = "0.8"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-tungstenite = "0.26"
rust-embed = "8"
mime = "0.3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
